Sorted the alignment issues with the social icons widget

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -1220,6 +1220,10 @@ hr.line.align-right {
     text-decoration: none;
 }
 
+.bk-footer .widget.profile .bk-profile-socialicons span {
+  display: inline-block;
+}
+
 /* FOOTER PROFILE - twitter in profile widget*/
 /*  LATEST TWEET IN FOOTER */
 
